# sxc

./: .gitignore  CMakeLists.txt  Makefile  README.md
apps/: CMakeLists.txt  app.cpp
include/: main.hpp
include/sxc/: client.hpp  custom_input.hpp  focusable.hpp  queue.hpp  server.hpp  tls.hpp  tui.hpp  util.hpp
src/: CMakeLists.txt  client.cpp  custom_input.cpp  focusable.cpp  main.cpp  queue.cpp  server.cpp  tls.cpp  tui.cpp  util.cpp
